--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "run-p build:*",
+    "build:remix": "remix build",
+    "build:css": "sass styles/_entry.scss app/global.css",
+    "dev": "run-p dev:*",
+    "dev:css": "npm run build:css -- --watch",
+    "dev:remix": "remix dev",
     "start": "remix-serve build"
   },
   "dependencies": {
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -20,6 +25,8 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "eslint": "^8.15.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.52.1",
     "typescript": "^4.6.4"
   },
   "engines": {
