--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "run-p build:*",
     "build:remix": "remix build",
     "build:css": "sass styles/_entry.scss app/global.css",
+    "predev": "npm run build:css",
     "dev": "run-p dev:*",
     "dev:css": "npm run build:css -- --watch",
-    "dev:remix": "remix dev",
+    "dev:remix": "cross-env PUBLIC_ENV=local remix dev",
     "start": "remix-serve build"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "@remix-run/eslint-config": "*",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
+    "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
