--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "predev": "npm run build:css",
     "dev": "run-p dev:*",
     "dev:css": "npm run build:css -- --watch",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx}'",
     "dev:remix": "cross-env PUBLIC_ENV=local remix dev",
     "start": "remix-serve build"
   },
@@ -22,6 +23,7 @@
     "match-sorter": "^6.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.31.3",
     "react-select": "^5.3.2"
   },
   "devDependencies": {
