--- a/env/.env.local.example
+++ b/env/.env.local.example
@@ -1,3 +1,3 @@
 PUBLIC_APPINSIGHTS_INSTRUMENTATIONKEY=
-API_URL=https://api-dev.yourthing.com
+API_URL=https://droopytersen-bookmarks.builtwithdark.com
 PUBLIC_MESSAGE=Hi, I'm Local development
