--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dev:css": "npm run build:css -- --watch",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx}'",
     "dev:remix": "cross-env PUBLIC_ENV=local remix dev",
+    "lint": "npx eslint '*/**/*.{js,ts,jsx,tsx}' --fix",
+    "prebuild": "npm run lint",
     "start": "remix-serve build",
     "storybook": "start-storybook -p 6006"
   },
