--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "run-p build:*",
     "build:remix": "remix build",
     "build:css": "sass styles/_entry.scss app/global.css",
-    "build:storybook": "build-storybook --docs -o public/storybook",
+    "buildzzz:storybook": "build-storybook --docs -o public/storybook",
     "predev": "npm run build:css",
     "dev": "run-p dev:*",
     "dev:css": "npm run build:css -- --watch",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx}'",
     "dev:remix": "cross-env PUBLIC_ENV=local remix dev",
+    "lint": "npx eslint '*/**/*.{js,ts,jsx,tsx}' --fix",
+    "prebuild": "npm run lint",
     "start": "remix-serve build",
     "storybook": "start-storybook -p 6006"
   },
