--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "npx eslint '*/**/*.{js,ts,jsx,tsx}' --fix",
     "prebuild": "npm run lint",
     "start": "remix-serve build",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006",
+    "test": "vitest --reporter verbose --environment jsdom"
   },
   "dependencies": {
     "@remix-run/node": "*",
@@ -49,12 +50,14 @@
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
+    "jsdom": "^19.0.0",
     "npm-run-all": "^4.1.5",
     "react-router-dom": "^6.3.0",
     "rimraf": "^3.0.2",
     "sass": "^1.52.1",
     "typescript": "^4.6.4",
-    "vite": "^2.9.10"
+    "vite": "^2.9.10",
+    "vitest": "^0.14.1"
   },
   "engines": {
     "node": ">=14"
