--- a/env/.env.prod
+++ b/env/.env.prod
@@ -1,3 +1,3 @@
 PUBLIC_APPINSIGHTS_INSTRUMENTATIONKEY=993f309a-c629-4208-afcd-20204e535af2
-API_URL=https://api.yourthing.com
+API_URL=https://droopytersen-bookmarks.builtwithdark.com
 PUBLIC_MESSAGE=Hi, I'm the Prod environment.
