--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "build": "run-s build:css build:remix",
     "build:remix": "remix build",
     "build:css": "sass styles/_entry.scss app/global.css",
-    "buildzzz:storybook": "build-storybook --docs -o public/storybook",
+    "build:ladle": "ladle build",
     "predev": "npm run build:css",
     "dev": "run-p dev:*",
     "dev:css": "npm run build:css -- --watch",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx}'",
     "dev:remix": "cross-env PUBLIC_ENV=local remix dev",
     "lint": "npx eslint '*/**/*.{js,ts,jsx,tsx}' --fix",
+    "ladle": "ladle serve",
+    "storybook": "ladle serve",
     "prebuild": "npm run lint",
     "start": "remix-serve build",
-    "storybook": "start-storybook -p 6006",
     "test": "vitest --reporter verbose --environment jsdom"
   },
   "dependencies": {
@@ -35,24 +36,15 @@
     "unfurl.js": "^5.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
+    "@ladle/react": "^0.16.0",
     "@remix-run/dev": "*",
     "@remix-run/eslint-config": "*",
-    "@storybook/addon-actions": "^6.5.7",
-    "@storybook/addon-essentials": "^6.5.7",
-    "@storybook/addon-interactions": "^6.5.7",
-    "@storybook/addon-links": "^6.5.7",
-    "@storybook/builder-vite": "^0.1.36",
-    "@storybook/react": "^6.5.7",
-    "@storybook/testing-library": "^0.0.11",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
-    "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
     "jsdom": "^19.0.0",
     "npm-run-all": "^4.1.5",
-    "react-router-dom": "^6.3.0",
     "rimraf": "^3.0.2",
     "sass": "^1.52.1",
     "typescript": "^4.6.4",
