Fix for local self-signed API requests

--- a/env/.env.local.example
+++ b/env/.env.local.example
@@ -1,3 +1,4 @@
 PUBLIC_APPINSIGHTS_INSTRUMENTATIONKEY=
 API_URL=https://droopytersen-bookmarks.builtwithdark.com
 PUBLIC_MESSAGE=Hi, I'm Local development
+NODE_TLS_REJECT_UNAUTHORIZED=0
