Update azure-pipelines.develop.yml for Azure Pipelines

--- a/azure-pipelines.develop.yml
+++ b/azure-pipelines.develop.yml
@@ -18,7 +18,7 @@ jobs:
           cacheHitVar: NODE_MODULES_CACHE_HIT
       
       - script: |
-          npm ci
+          npm install
         condition: eq(variables.NODE_MODULES_CACHE_HIT, 'false')
         displayName: Install dependencies
 
