--- a/azure-pipelines.develop.yml
+++ b/azure-pipelines.develop.yml
@@ -17,7 +17,7 @@ jobs:
           
     - task: Cache@2
       inputs:
-        key: 'npm_v1 | "$(Agent.OS)" | $(spaDir)/package-lock.json'
+        key: '"npm_cache" | "$(Agent.OS)" | package.json'
         path: $(npmCacheDir)
         cacheHitVar: NPM_CACHE_RESTORED
       displayName: "Cache ~/.npm directory"
