--- a/azure-pipelines.develop.yml
+++ b/azure-pipelines.develop.yml
@@ -32,14 +32,8 @@ jobs:
         displayName: "Lint and build"
 
       - script: |
-          rm -rf node_modules
-          mkdir temp
-          cd temp
-          npm install @remix-run/serve 
-          cd ..
-          mkdir node_modules
-          mv temp/node_modules/* node_modules
-        displayName: "Delete all node_modules except remix-serve"
+          npm prune --production
+        displayName: Prune to production only dependencies
 
       - task: ArchiveFiles@2
         displayName: Archive
