--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -12,7 +12,8 @@ variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: "b65fed88-5f25-4ab6-9242-0a6e22864dab"
   imageRepository: "remixenterprisestarter"
-  containerRegistry: "droopycontainers.azurecr.io"
+  containerRegistry: "droopycontainers"
+  latestImage: ${containerRegistry}.azurecr.io/${imageRepository}:latest
   dockerfilePath: "$(Build.SourcesDirectory)/Dockerfile"
   tag: "$(Build.BuildId)"
 
@@ -23,17 +24,35 @@ stages:
   - stage: Build
     displayName: Build and push stage
     jobs:
+      - job: load-docker-cache
+        displayName: Load cached docker layers
+        pool:
+          vmImage: $(vmImageName)
+        steps: 
+          - task: Docker@2
+            inputs:
+              containerRegistry: '${containerRegistry}'
+              command: 'login'
+
+          - script: "docker pull ${latestImage}"
+            displayName: Pull latest for layer caching
+            continueOnError: true # for first build, no cache
+        
       - job: Build
         displayName: Build
         pool:
           vmImage: $(vmImageName)
         steps:
-          - task: Docker@2
-            displayName: Build and push an image to container registry
-            inputs:
-              command: buildAndPush
-              repository: $(imageRepository)
-              dockerfile: $(dockerfilePath)
-              containerRegistry: $(dockerRegistryServiceConnection)
-              tags: |
-                $(tag)
+        - task: Docker@2
+          inputs:
+            containerRegistry: '${containerRegistry}'
+            repository: '${imageRepository}'
+            command: 'build'
+            Dockerfile: '**/Dockerfile'
+            arguments: '--cache-from=${latestImage}'
+
+        - task: Docker@2
+          inputs:
+            containerRegistry: '${containerRegistry}'
+            repository: '${imageRepository}'
+            command: 'push'
