--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -31,7 +31,7 @@ stages:
         steps: 
           - task: Docker@2
             inputs:
-              containerRegistry: '${containerRegistry}'
+              containerRegistry: '${dockerRegistryServiceConnection}'
               command: 'login'
 
           - script: "docker pull ${latestImage}"
@@ -45,7 +45,7 @@ stages:
         steps:
         - task: Docker@2
           inputs:
-            containerRegistry: '${containerRegistry}'
+            containerRegistry: '${dockerRegistryServiceConnection}'
             repository: '${imageRepository}'
             command: 'build'
             Dockerfile: '**/Dockerfile'
@@ -53,6 +53,6 @@ stages:
 
         - task: Docker@2
           inputs:
-            containerRegistry: '${containerRegistry}'
+            containerRegistry: '${dockerRegistryServiceConnection}'
             repository: '${imageRepository}'
             command: 'push'
