--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -13,7 +13,7 @@ variables:
   dockerRegistryServiceConnection: "b65fed88-5f25-4ab6-9242-0a6e22864dab"
   imageRepository: "remixenterprisestarter"
   containerRegistry: "droopycontainers"
-  latestImage: ${containerRegistry}.azurecr.io/${imageRepository}:latest
+  latestImage: $(containerRegistry).azurecr.io/$(imageRepository):latest
   dockerfilePath: "$(Build.SourcesDirectory)/Dockerfile"
   tag: "$(Build.BuildId)"
 
@@ -36,21 +36,21 @@ stages:
             containerRegistry: b65fed88-5f25-4ab6-9242-0a6e22864dab
             command: 'login'
 
-        - script: "docker pull ${latestImage}"
+        - script: "docker pull $(latestImage)"
           displayName: Pull latest for layer caching
           continueOnError: true # for first build, no cache
         - task: Docker@2
           displayName: "build dockerfile"
           inputs:
             containerRegistry: b65fed88-5f25-4ab6-9242-0a6e22864dab
-            repository: '${imageRepository}'
+            repository: '$(imageRepository)'
             command: 'build'
             Dockerfile: '**/Dockerfile'
-            arguments: '--cache-from=${latestImage}'
+            arguments: '--cache-from=$(latestImage)'
 
         - task: Docker@2
           displayName: "Push docker images"
           inputs:
             containerRegistry: b65fed88-5f25-4ab6-9242-0a6e22864dab
-            repository: '${imageRepository}'
+            repository: '$(imageRepository)'
             command: 'push'
