--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -39,13 +39,14 @@ stages:
         - script: "docker pull $(latestImage)"
           displayName: Pull latest for layer caching
           continueOnError: true # for first build, no cache
+          
         - task: Docker@2
           displayName: "build dockerfile"
           inputs:
             containerRegistry: b65fed88-5f25-4ab6-9242-0a6e22864dab
             repository: '$(imageRepository)'
             command: 'build'
-            buildContext: '$(BUILDCONTEXT)'
+            buildContext: '$(System.DefaultWorkingDirectory)'
             Dockerfile: '**/Dockerfile'
             arguments: '--cache-from=$(latestImage)'
             tags: |
