--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -36,22 +36,31 @@ stages:
             containerRegistry: b65fed88-5f25-4ab6-9242-0a6e22864dab
             command: 'login'
 
-        - script: "docker pull $(latestImage)"
+        - script: "docker pull $(latestImage) || true"
           displayName: Pull latest for layer caching
           continueOnError: true # for first build, no cache
-          
-        - task: Docker@2
-          displayName: "build dockerfile"
-          inputs:
-            containerRegistry: b65fed88-5f25-4ab6-9242-0a6e22864dab
-            repository: '$(imageRepository)'
-            command: 'build'
-            buildContext: '$(System.DefaultWorkingDirectory)'
-            Dockerfile: '**/Dockerfile'
-            arguments: '--cache-from=$(latestImage)'
-            tags: |
-              $(Build.BuildNumber)
-              latest
+
+
+        - script: |
+            docker build
+            --cache-from $(latestImage)
+            -t $(imageRepository):$(Build.BuildNumber)
+            -t $(imageRepository):latest
+          displayName: "Docker build"
+
+
+        # - task: Docker@2
+        #   displayName: "build dockerfile"
+        #   inputs:
+        #     containerRegistry: b65fed88-5f25-4ab6-9242-0a6e22864dab
+        #     repository: '$(imageRepository)'
+        #     command: 'build'
+        #     buildContext: '$(System.DefaultWorkingDirectory)'
+        #     Dockerfile: '**/Dockerfile'
+        #     arguments: '--cache-from=$(latestImage)'
+        #     tags: |
+        #       $(Build.BuildNumber)
+        #       latest
 
         - task: Docker@2
           displayName: "Push docker images"
