--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -42,10 +42,7 @@ stages:
 
 
         - script: |
-            docker build
-            --cache-from $(latestImage)
-            -t $(imageRepository):$(Build.BuildNumber)
-            -t $(imageRepository):latest
+            docker build . --cache-from $(latestImage) -t $(imageRepository):$(Build.BuildNumber) -t $(imageRepository):latest
           displayName: "Docker build"
 
 
