--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -11,7 +11,6 @@ resources:
 variables:
   imageRepository: "remixenterprisestarter"
   containerRegistry: "droopycontainers"
-  latestImage: $(containerRegistry).azurecr.io/$(imageRepository):latest
 
 stages:
   - stage: Build
@@ -25,22 +24,11 @@ stages:
         steps:
 
         - task: Docker@2
-          displayName: "login to container registry"
           inputs:
-            containerRegistry: $(containerRegistry)
-            command: 'login'
-        
-        - script: |
-            docker pull $(latestImage) || true
-            docker build . --cache-from $(latestImage) -t $(imageRepository):$(Build.BuildId) -t $(imageRepository):latest
-          displayName: "Docker build"
-
-        - task: Docker@2
-          displayName: "Push docker images"
-          inputs:
-            containerRegistry: $(containerRegistry)
+            containerRegistry: '$(containerRegistry)'
             repository: '$(imageRepository)'
-            command: 'push'
+            command: 'buildAndPush'
+            Dockerfile: '**/Dockerfile'
             tags: |
               $(Build.BuildId)
               latest
