--- a/azure-pipelines.develop.yml
+++ b/azure-pipelines.develop.yml
@@ -36,6 +36,12 @@ jobs:
         inputs:
           versionSpec: "16.x"
       
+      - task: Cache@2
+        inputs:
+          key: '"node_modules" | "$(Agent.OS)" | package.json'
+          path: node_modules
+          cacheHitVar: NODE_MODULES_CACHE_HIT
+
       - script: |
           npm install
         condition: eq(variables.NODE_MODULES_CACHE_HIT, 'false')
