--- a/azure-pipelines.develop.yml
+++ b/azure-pipelines.develop.yml
@@ -17,7 +17,7 @@ jobs:
 
       - task: Cache@2
         inputs:
-          key: '"node_modules" | "$(Agent.OS)" | package.json'
+          key: '"node_modules2" | "$(Agent.OS)" | package.json'
           path: node_modules
           cacheHitVar: NODE_MODULES_CACHE_HIT
       
@@ -38,7 +38,7 @@ jobs:
       
       - task: Cache@2
         inputs:
-          key: '"node_modules" | "$(Agent.OS)" | package.json'
+          key: '"node_modules2" | "$(Agent.OS)" | package.json'
           path: node_modules
           cacheHitVar: NODE_MODULES_CACHE_HIT
 
