--- a/azure-pipelines.develop.yml
+++ b/azure-pipelines.develop.yml
@@ -49,6 +49,7 @@ jobs:
         displayName: "Lint and build"
 
   - job: createartifact
+    dependsOn: buildandcache
     displayName: Create artifact
     pool:
       vmImage: ubuntu-latest
@@ -67,6 +68,12 @@ jobs:
           key: '"browser-build" | "$(Agent.OS)" | $(buildFiles)'
           path: public/build
           cacheHitVar: BROWSER_BUILD_CACHE_HIT
+      
+      - script: |
+          mv package.json package.json2
+          npm install @remix-run/serve
+          mv package.json2 package.json
+        displayName: Install @remix-run/serve
       
       - task: ArchiveFiles@2
         displayName: Archive
