--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -3,7 +3,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-  - devops2
+  - devops
 
 resources:
   - repo: self
